--- a/bezier/src/main/res/values-night/colors.xml
+++ b/bezier/src/main/res/values-night/colors.xml
@@ -1,127 +1,165 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
-
-    <!-- bg -->
-    <color name="bg_grey_darkest">@color/white</color>
-    <color name="bg_grey_dark">@color/grey500</color>
-    <color name="bg_grey_light">@color/grey700</color>
-    <color name="bg_grey_lighter">@color/grey800</color>
-    <color name="bg_grey_lightest">@color/grey850</color>
-    <color name="inverted_bg_grey_lighter">@color/grey100</color>
-
-    <color name="bg_black_darkest">@color/white_60</color>
-    <color name="bg_black_darker">@color/white_40</color>
-    <color name="bg_black_dark">@color/white_20</color>
-    <color name="bg_black_light">@color/white_12</color>
-    <color name="bg_black_lighter">@color/white_8</color>
-    <color name="bg_black_lightest">@color/white_5</color>
-
-    <color name="bg_white_high">@color/grey700</color>
-    <color name="bg_white_low">@color/grey800</color>
-    <color name="bg_white_normal">@color/grey900</color>
-
-    <!-- bdr -->
-    <color name="bdr_black_light">@color/white_12</color>
-    <color name="bdr_black_lightest">@color/white_5</color>
-
-    <!-- shdw -->
-    <color name="shdw_xlarge">@color/black_60</color>
-    <color name="shdw_large">@color/black_40</color>
-    <color name="shdw_medium">@color/black_20</color>
-    <color name="shdw_small">@color/black_15</color>
-    <color name="shdw_base">@color/black_8</color>
-    <color name="shdw_base_inner">@color/white_8</color>
-
-    <!-- txt -->
-    <color name="txt_black_darkest">@color/white_80</color>
-    <color name="txt_black_darker">@color/white_60</color>
-    <color name="txt_black_dark">@color/white_40</color>
-
-    <!-- dim -->
-    <color name="bg_white_dim_dark">@color/black_60</color>
-
-    <color name="txt_white_normal">@color/grey900</color>
-
-    <!-- bgtxt -->
-    <color name="bgtxt_red_dark">@color/red400</color>
-    <color name="bgtxt_red_normal">@color/red300</color>
-    <color name="bgtxt_red_light">@color/red300_40</color>
-    <color name="bgtxt_red_lighter">@color/red300_30</color>
-    <color name="bgtxt_red_lightest">@color/red300_20</color>
-
-    <color name="bgtxt_cobalt_dark">@color/cobalt400</color>
-    <color name="bgtxt_cobalt_normal">@color/cobalt300</color>
-    <color name="bgtxt_cobalt_light">@color/cobalt300_40</color>
-    <color name="bgtxt_cobalt_lighter">@color/cobalt300_30</color>
-    <color name="bgtxt_cobalt_lightest">@color/cobalt300_20</color>
-
-    <color name="bgtxt_green_dark">@color/green400</color>
-    <color name="bgtxt_green_normal">@color/green300</color>
-    <color name="bgtxt_green_light">@color/green300_40</color>
-    <color name="bgtxt_green_lighter">@color/green300_30</color>
-    <color name="bgtxt_green_lightest">@color/green300_20</color>
-    <color name="inverted_bgtxt_green_normal">@color/green400</color>
-
-    <color name="bgtxt_teal_dark">@color/teal400</color>
-    <color name="bgtxt_teal_normal">@color/teal300</color>
-    <color name="bgtxt_teal_light">@color/teal300_40</color>
-    <color name="bgtxt_teal_lighter">@color/teal300_30</color>
-    <color name="bgtxt_teal_lightest">@color/teal300_20</color>
-
-    <color name="bgtxt_orange_dark">@color/orange400</color>
-    <color name="bgtxt_orange_normal">@color/orange300</color>
-    <color name="bgtxt_orange_light">@color/orange300_40</color>
-    <color name="bgtxt_orange_lighter">@color/orange300_30</color>
-    <color name="bgtxt_orange_lightest">@color/orange300_20</color>
-
-    <color name="bgtxt_yellow_dark">@color/yellow400</color>
-    <color name="bgtxt_yellow_normal">@color/yellow300</color>
-    <color name="bgtxt_yellow_light">@color/yellow300_40</color>
-    <color name="bgtxt_yellow_lighter">@color/yellow300_30</color>
-    <color name="bgtxt_yellow_lightest">@color/yellow300_20</color>
-
-    <color name="bgtxt_olive_dark">@color/olive400</color>
-    <color name="bgtxt_olive_normal">@color/olive300</color>
-    <color name="bgtxt_olive_light">@color/olive300_40</color>
-    <color name="bgtxt_olive_lighter">@color/olive300_30</color>
-    <color name="bgtxt_olive_lightest">@color/olive300_20</color>
-
-    <color name="bgtxt_pink_dark">@color/pink400</color>
-    <color name="bgtxt_pink_normal">@color/pink300</color>
-    <color name="bgtxt_pink_light">@color/pink300_40</color>
-    <color name="bgtxt_pink_lighter">@color/pink300_30</color>
-    <color name="bgtxt_pink_lightest">@color/pink300_20</color>
-
-    <color name="bgtxt_navy_dark">@color/navy400</color>
-    <color name="bgtxt_navy_normal">@color/navy300</color>
-    <color name="bgtxt_navy_light">@color/navy300_40</color>
-    <color name="bgtxt_navy_lighter">@color/navy300_30</color>
-    <color name="bgtxt_navy_lightest">@color/navy300_20</color>
-
-    <color name="bgtxt_blue_dark">@color/blue400</color>
-    <color name="bgtxt_blue_normal">@color/blue300</color>
-    <color name="bgtxt_blue_light">@color/blue300_40</color>
-    <color name="bgtxt_blue_lighter">@color/blue300_30</color>
-    <color name="bgtxt_blue_lightest">@color/blue300_20</color>
-
-    <color name="bgtxt_purple_dark">@color/purple400</color>
-    <color name="bgtxt_purple_normal">@color/purple300</color>
-    <color name="bgtxt_purple_light">@color/purple300_40</color>
-    <color name="bgtxt_purple_lighter">@color/purple300_30</color>
-    <color name="bgtxt_purple_lightest">@color/purple300_20</color>
-
-    <color name="bgtxt_absolute_white_dark">@color/white</color>
-    <color name="bgtxt_absolute_white_normal">@color/white_90</color>
-    <color name="bgtxt_absolute_white_light">@color/white_60</color>
-    <color name="bgtxt_absolute_white_lighter">@color/white_40</color>
-    <color name="bgtxt_absolute_white_lightest">@color/white_20</color>
-
-    <color name="bgtxt_absolute_black_dark">@color/black</color>
-    <color name="bgtxt_absolute_black_normal">@color/black_85</color>
-    <color name="bgtxt_absolute_black_light">@color/black_60</color>
-    <color name="bgtxt_absolute_black_lighter">@color/black_40</color>
-    <color name="bgtxt_absolute_black_lightest">@color/black_20</color>
-
-    <color name="bg_transparent">@color/white_0</color>
-
+    <color name="text_neutral">@color/white_80</color>
+    <color name="text_inverse">@color/black_85</color>
+    <color name="text_neutral_heaviest">@color/white_100</color>
+    <color name="text_neutral_light">@color/white_60</color>
+    <color name="text_neutral_lighter">@color/white_40</color>
+    <color name="icon_neutral">@color/white_40</color>
+    <color name="icon_action">@color/blue_300</color>
+    <color name="icon_success">@color/green_300</color>
+    <color name="icon_highlight">@color/cobalt_300</color>
+    <color name="icon_warning">@color/orange_300</color>
+    <color name="icon_critical">@color/red_300</color>
+    <color name="icon_neutral_heavy">@color/white_60</color>
+    <color name="icon_neutral_heavier">@color/white_80</color>
+    <color name="icon_inverse_heavier">@color/black_85</color>
+    <color name="icon_accent_blue">@color/blue_300</color>
+    <color name="icon_accent_cobalt">@color/cobalt_300</color>
+    <color name="icon_accent_green">@color/green_300</color>
+    <color name="icon_accent_red">@color/red_300</color>
+    <color name="icon_accent_orange">@color/orange_300</color>
+    <color name="icon_accent_yellow">@color/yellow_300</color>
+    <color name="icon_accent_olive">@color/olive_300</color>
+    <color name="icon_accent_teal">@color/teal_300</color>
+    <color name="icon_accent_navy">@color/navy_300</color>
+    <color name="icon_accent_purple">@color/purple_300</color>
+    <color name="icon_accent_pink">@color/pink_300</color>
+    <color name="icon_absolute_white">@color/white_100</color>
+    <color name="icon_absolute_black">@color/black_100</color>
+    <color name="fill_action">@color/blue_300</color>
+    <color name="fill_success">@color/green_300</color>
+    <color name="fill_highlight">@color/cobalt_300</color>
+    <color name="fill_warning">@color/orange_300</color>
+    <color name="fill_critical">@color/red_300</color>
+    <color name="fill_neutral_heaviest">@color/white_100</color>
+    <color name="fill_neutral_heavier">@color/white_40</color>
+    <color name="fill_neutral_heavy">@color/white_20</color>
+    <color name="fill_neutral_light">@color/white_8</color>
+    <color name="fill_neutral_lighter">@color/white_5</color>
+    <color name="fill_neutral_lightest">@color/white_3</color>
+    <color name="fill_neutral_transparent">@color/white_0</color>
+    <color name="fill_action_light">@color/blue_300_30</color>
+    <color name="fill_action_lighter">@color/blue_300_18</color>
+    <color name="fill_action_transparent">@color/blue_300_0</color>
+    <color name="fill_success_light">@color/green_300_30</color>
+    <color name="fill_success_lighter">@color/green_300_18</color>
+    <color name="fill_success_transparent">@color/green_300_0</color>
+    <color name="fill_highlight_light">@color/cobalt_300_30</color>
+    <color name="fill_highlight_lighter">@color/cobalt_300_18</color>
+    <color name="fill_highlight_transparent">@color/cobalt_300_0</color>
+    <color name="fill_warning_light">@color/orange_300_30</color>
+    <color name="fill_warning_lighter">@color/orange_300_18</color>
+    <color name="fill_warning_transparent">@color/orange_300_0</color>
+    <color name="fill_critical_light">@color/red_300_30</color>
+    <color name="fill_critical_lighter">@color/red_300_18</color>
+    <color name="fill_critical_transparent">@color/red_300_0</color>
+    <color name="fill_grey_heavier">@color/grey_750</color>
+    <color name="fill_grey_heavy">@color/grey_800</color>
+    <color name="fill_grey_light">@color/grey_900</color>
+    <color name="fill_grey">@color/grey_850</color>
+    <color name="fill_bright">@color/grey_650</color>
+    <color name="fill_accent_blue">@color/blue_300_18</color>
+    <color name="fill_accent_cobalt">@color/cobalt_300_18</color>
+    <color name="fill_accent_green">@color/green_300_18</color>
+    <color name="fill_accent_red">@color/red_300_18</color>
+    <color name="fill_accent_orange">@color/orange_300_18</color>
+    <color name="fill_accent_yellow">@color/yellow_300_18</color>
+    <color name="fill_accent_olive">@color/olive_300_18</color>
+    <color name="fill_accent_teal">@color/teal_300_18</color>
+    <color name="fill_accent_navy">@color/navy_300_18</color>
+    <color name="fill_accent_purple">@color/purple_300_18</color>
+    <color name="fill_accent_pink">@color/pink_300_18</color>
+    <color name="fill_accent_blue_heavy">@color/blue_300_30</color>
+    <color name="fill_accent_blue_heavier">@color/blue_300</color>
+    <color name="fill_accent_blue_transparent">@color/blue_300_0</color>
+    <color name="fill_accent_cobalt_heavy">@color/cobalt_300_30</color>
+    <color name="fill_accent_cobalt_heavier">@color/cobalt_300</color>
+    <color name="fill_accent_cobalt_transparent">@color/cobalt_300_0</color>
+    <color name="fill_accent_green_heavy">@color/green_300_30</color>
+    <color name="fill_accent_green_heavier">@color/green_300</color>
+    <color name="fill_accent_green_transparent">@color/green_300_0</color>
+    <color name="fill_accent_red_heavy">@color/red_300_30</color>
+    <color name="fill_accent_red_heavier">@color/red_300</color>
+    <color name="fill_accent_red_transparent">@color/red_300_0</color>
+    <color name="fill_accent_orange_heavy">@color/orange_300_30</color>
+    <color name="fill_accent_orange_heavier">@color/orange_300</color>
+    <color name="fill_accent_orange_transparent">@color/orange_300_0</color>
+    <color name="fill_accent_yellow_heavy">@color/yellow_300_30</color>
+    <color name="fill_accent_yellow_heavier">@color/yellow_300</color>
+    <color name="fill_accent_yellow_transparent">@color/yellow_300_0</color>
+    <color name="fill_accent_olive_heavy">@color/olive_300_30</color>
+    <color name="fill_accent_olive_heavier">@color/olive_300</color>
+    <color name="fill_accent_olive_transparent">@color/olive_300_0</color>
+    <color name="fill_accent_teal_heavy">@color/teal_300_30</color>
+    <color name="fill_accent_teal_heavier">@color/teal_300</color>
+    <color name="fill_accent_teal_transparent">@color/teal_300_0</color>
+    <color name="fill_accent_navy_heavy">@color/navy_300_30</color>
+    <color name="fill_accent_navy_heavier">@color/navy_300</color>
+    <color name="fill_accent_navy_transparent">@color/navy_300_0</color>
+    <color name="fill_accent_purple_heavy">@color/purple_300_30</color>
+    <color name="fill_accent_purple_heavier">@color/purple_300</color>
+    <color name="fill_accent_purple_transparent">@color/purple_300_0</color>
+    <color name="fill_accent_pink_heavy">@color/pink_300_30</color>
+    <color name="fill_accent_pink_heavier">@color/pink_300</color>
+    <color name="fill_accent_pink_transparent">@color/pink_300_0</color>
+    <color name="fill_absolute_white">@color/white_100</color>
+    <color name="fill_absolute_black">@color/black_100</color>
+    <color name="fill_absolute_white_light">@color/white_20</color>
+    <color name="fill_absolute_white_transparent">@color/white_0</color>
+    <color name="fill_absolute_black_light">@color/black_20</color>
+    <color name="fill_absolute_black_transparent">@color/black_0</color>
+    <color name="border_neutral">@color/white_12</color>
+    <color name="border_neutral_heavy">@color/white_20</color>
+    <color name="border_neutral_heavier">@color/white_40</color>
+    <color name="border_detach_highest">@color/grey_750</color>
+    <color name="border_absolute_white">@color/white_100</color>
+    <color name="border_detach_higher">@color/grey_800</color>
+    <color name="surface_highest">@color/grey_750</color>
+    <color name="surface_higher">@color/grey_800</color>
+    <color name="surface_high">@color/grey_850</color>
+    <color name="surface_low">@color/grey_950</color>
+    <color name="dim_absolute_black_heavy">@color/black_60</color>
+    <color name="dim_absolute_white_heavy">@color/white_80</color>
+    <color name="text_action">@color/blue_300</color>
+    <color name="text_success">@color/green_300</color>
+    <color name="text_highlight">@color/cobalt_300</color>
+    <color name="text_warning">@color/orange_300</color>
+    <color name="text_critical">@color/red_300</color>
+    <color name="text_accent_blue">@color/blue_300</color>
+    <color name="text_accent_cobalt">@color/cobalt_300</color>
+    <color name="text_accent_green">@color/green_300</color>
+    <color name="surface_glass_highest">@color/grey_750_90</color>
+    <color name="text_accent_red">@color/red_300</color>
+    <color name="surface_glass_higher">@color/grey_800_90</color>
+    <color name="surface_glass_high">@color/grey_850_90</color>
+    <color name="surface_glass">@color/grey_800_90</color>
+    <color name="text_accent_orange">@color/orange_300</color>
+    <color name="text_accent_yellow">@color/yellow_300</color>
+    <color name="text_accent_olive">@color/olive_300</color>
+    <color name="text_accent_teal">@color/teal_300</color>
+    <color name="text_accent_navy">@color/navy_300</color>
+    <color name="text_accent_purple">@color/purple_300</color>
+    <color name="text_accent_pink">@color/pink_300</color>
+    <color name="text_absolute_white">@color/white_100</color>
+    <color name="text_absolute_black">@color/black_100</color>
+    <color name="surface">@color/grey_900</color>
+    <color name="gradient_accent_green">@color/green_400</color>
+    <color name="border_detach">@color/grey_900</color>
+    <color name="gradient_accent_green_light">@color/green_300</color>
+    <color name="dim_absolute_black">@color/black_40</color>
+    <color name="state_default">@color/white_20</color>
+    <color name="state_action">@color/blue_300</color>
+    <color name="state_warning">@color/orange_300</color>
+    <color name="state_action_light">@color/blue_300_45</color>
+    <color name="state_warning_light">@color/orange_300</color>
+    <color name="elevation_xlarge">@color/black_30</color>
+    <color name="elevation_large">@color/black_22</color>
+    <color name="elevation_medium">@color/black_15</color>
+    <color name="elevation_small">@color/black_8</color>
+    <color name="elevation_base">@color/black_5</color>
+    <color name="elevation_base_inner">@color/white_12</color>
+    <color name="dim_absolute_white">@color/white_40</color>
+    <color name="border_detach_high">@color/grey_850</color>
+    <color name="border_detach_low">@color/grey_950</color>
 </resources>
