--- a/bezier/src/main/res/values/color_palettes.xml
+++ b/bezier/src/main/res/values/color_palettes.xml
@@ -1,213 +1,237 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- blue -->
-
-    <color name="blue500">#4E40C9</color>
-
-    <color name="blue400">#5E56F0</color>
-    <color name="blue400_30">#4D5E56F0</color>
-    <color name="blue400_20">#335E56F0</color>
-    <color name="blue400_10">#1A5E56F0</color>
-
-    <color name="blue300">#6687FF</color>
-    <color name="blue300_40">#666687FF</color>
-    <color name="blue300_30">#4D6687FF</color>
-    <color name="blue300_20">#336687FF</color>
-
-
-    <!-- cobalt -->
-
-    <color name="cobalt500">#327AB8</color>
-
-    <color name="cobalt400">#329BE7</color>
-    <color name="cobalt400_30">#4D329BE7</color>
-    <color name="cobalt400_20">#33329BE7</color>
-    <color name="cobalt400_10">#1A329BE7</color>
-
-    <color name="cobalt300">#47C8FF</color>
-    <color name="cobalt300_40">#6647C8FF</color>
-    <color name="cobalt300_30">#4D47C8FF</color>
-    <color name="cobalt300_20">#3347C8FF</color>
-
-
-    <!-- teal -->
-
-    <color name="teal500">#449C8A</color>
-
-    <color name="teal400">#0FB3A3</color>
-    <color name="teal400_30">#4D0FB3A3</color>
-    <color name="teal400_20">#330FB3A3</color>
-    <color name="teal400_10">#1A0FB3A3</color>
-
-    <color name="teal300">#3CDDCD</color>
-    <color name="teal300_40">#663CDDCD</color>
-    <color name="teal300_30">#4D3CDDCD</color>
-    <color name="teal300_20">#333CDDCD</color>
-
-
-    <!-- green -->
-
-    <color name="green500">#41904F</color>
-
-    <color name="green400">#31A552</color>
-    <color name="green400_30">#4D31A552</color>
-    <color name="green400_20">#3331A552</color>
-    <color name="green400_10">#1A31A552</color>
-
-    <color name="green300">#3ACF5A</color>
-    <color name="green300_40">#663ACF5A</color>
-    <color name="green300_30">#4D3ACF5A</color>
-    <color name="green300_20">#333ACF5A</color>
-
-
-    <!-- olive -->
-
-    <color name="olive500">#818628</color>
-
-    <color name="olive400">#A0A540</color>
-    <color name="olive400_30">#4DA0A540</color>
-    <color name="olive400_20">#33A0A540</color>
-    <color name="olive400_10">#1AA0A540</color>
-
-    <color name="olive300">#CAD548</color>
-    <color name="olive300_40">#66CAD548</color>
-    <color name="olive300_30">#4DCAD548</color>
-    <color name="olive300_20">#33CAD548</color>
-
-
-    <!-- yellow -->
-
-    <color name="yellow500">#C39E37</color>
-
-    <color name="yellow400">#EDBC40</color>
-    <color name="yellow400_30">#4DEDBC40</color>
-    <color name="yellow400_20">#33EDBC40</color>
-    <color name="yellow400_10">#1AEDBC40</color>
-
-    <color name="yellow300">#FDD353</color>
-    <color name="yellow300_40">#66FDD353</color>
-    <color name="yellow300_30">#4DFDD353</color>
-    <color name="yellow300_20">#33FDD353</color>
-
-
-    <!-- orange -->
-
-    <color name="orange500">#C57417</color>
-
-    <color name="orange400">#F4800B</color>
-    <color name="orange400_30">#4DF4800B</color>
-    <color name="orange400_20">#33F4800B</color>
-    <color name="orange400_10">#1AF4800B</color>
-
-    <color name="orange300">#FFAB5C</color>
-    <color name="orange300_40">#66FFAB5C</color>
-    <color name="orange300_30">#4DFFAB5C</color>
-    <color name="orange300_20">#33FFAB5C</color>
-
-
-    <!-- red -->
-
-    <color name="red500">#AC3E46</color>
-
-    <color name="red400">#E94E58</color>
-    <color name="red400_30">#4DE94E58</color>
-    <color name="red400_20">#33E94E58</color>
-    <color name="red400_10">#1AE94E58</color>
-
-    <color name="red300">#FF5C5C</color>
-    <color name="red300_40">#66FF5C5C</color>
-    <color name="red300_30">#4DFF5C5C</color>
-    <color name="red300_20">#33FF5C5C</color>
-
-
-    <!-- pink -->
-
-    <color name="pink500">#A32E92</color>
-
-    <color name="pink400">#CB48AD</color>
-    <color name="pink400_30">#4DCB48AD</color>
-    <color name="pink400_20">#33CB48AD</color>
-    <color name="pink400_10">#1ACB48AD</color>
-
-    <color name="pink300">#EC6FD3</color>
-    <color name="pink300_40">#66EC6FD3</color>
-    <color name="pink300_30">#4DEC6FD3</color>
-    <color name="pink300_20">#33EC6FD3</color>
-
-
-    <!-- purple -->
-
-    <color name="purple500">#6B23B3</color>
-
-    <color name="purple400">#915CE0</color>
-    <color name="purple400_30">#4D915CE0</color>
-    <color name="purple400_20">#33915CE0</color>
-    <color name="purple400_10">#1A915CE0</color>
-
-    <color name="purple300">#B570FF</color>
-    <color name="purple300_40">#66B570FF</color>
-    <color name="purple300_30">#4DB570FF</color>
-    <color name="purple300_20">#33B570FF</color>
-
-
-    <!-- navy -->
-
-    <color name="navy500">#333D5B</color>
-
-    <color name="navy400">#3A4F8D</color>
-    <color name="navy400_30">#4D3A4F8D</color>
-    <color name="navy400_20">#333A4F8D</color>
-    <color name="navy400_10">#1A3A4F8D</color>
-
-    <color name="navy300">#647CC9</color>
-    <color name="navy300_40">#66647CC9</color>
-    <color name="navy300_30">#4D647CC9</color>
-    <color name="navy300_20">#33647CC9</color>
-
-
-    <!-- grey -->
-
-    <color name="grey900">#242428</color>
-    <color name="grey850">#2A2B2D</color>
-    <color name="grey800">#313234</color>
-    <color name="grey800_80">#CC313234</color>
-    <color name="grey700">#464748</color>
-    <color name="grey700_80">#CC464748</color>
-    <color name="grey500">#A7A7AA</color>
-    <color name="grey200">#EFEFF0</color>
-    <color name="grey200_80">#CCEFEFF0</color>
-    <color name="grey100">#F7F7F8</color>
-    <color name="grey100_80">#CCF7F7F8</color>
-    <color name="grey50">#FCFCFC</color>
-
-
-    <!--  black -->
-
-    <color name="black">#000000</color>
-    <color name="black_85">#D9000000</color>
-    <color name="black_60">#99000000</color>
-    <color name="black_40">#66000000</color>
-    <color name="black_30">#4D000000</color>
-    <color name="black_22">#38000000</color>
-    <color name="black_20">#33000000</color>
-    <color name="black_15">#26000000</color>
-    <color name="black_8">#14000000</color>
-    <color name="black_5">#0D000000</color>
-    <color name="black_3">#08000000</color>
+    <color name="blue_100">#ffb2b7ff</color>
+    <color name="blue_200">#ff8d93ff</color>
+    <color name="blue_300">#ff8082ff</color>
+    <color name="blue_400">#ff6157ea</color>
+    <color name="blue_500">#ff5139d9</color>
+    <color name="blue_600">#ff4134bb</color>
+    <color name="blue_300_0">#008082ff</color>
+    <color name="blue_300_10">#1a8082ff</color>
+    <color name="blue_300_18">#2e8082ff</color>
+    <color name="blue_300_30">#4d8082ff</color>
+    <color name="blue_300_45">#738082ff</color>
+    <color name="blue_400_0">#006157ea</color>
+    <color name="blue_400_5">#0d6157ea</color>
+    <color name="blue_400_10">#1a6157ea</color>
+    <color name="blue_400_20">#336157ea</color>
+    <color name="blue_400_30">#4d6157ea</color>
+    <color name="cobalt_100">#ffa1d5ff</color>
+    <color name="cobalt_200">#ff8dcafc</color>
+    <color name="cobalt_300">#ff5cadef</color>
+    <color name="cobalt_400">#ff3292e3</color>
+    <color name="cobalt_500">#ff3176d1</color>
+    <color name="cobalt_600">#ff2b59b5</color>
+    <color name="cobalt_300_0">#005cadef</color>
+    <color name="cobalt_300_10">#1a5cadef</color>
+    <color name="cobalt_300_18">#2e5cadef</color>
+    <color name="cobalt_300_30">#4d5cadef</color>
+    <color name="cobalt_300_45">#735cadef</color>
+    <color name="cobalt_400_0">#003292e3</color>
+    <color name="cobalt_400_5">#0d3292e3</color>
+    <color name="cobalt_400_10">#1a3292e3</color>
+    <color name="cobalt_400_20">#333292e3</color>
+    <color name="cobalt_400_30">#4d3292e3</color>
+    <color name="green_100">#ffa4ecb3</color>
+    <color name="green_200">#ff7cd985</color>
+    <color name="green_300">#ff51c371</color>
+    <color name="green_400">#ff20ab55</color>
+    <color name="green_500">#ff358761</color>
+    <color name="green_600">#ff327055</color>
+    <color name="green_300_0">#0051c371</color>
+    <color name="green_300_10">#1a51c371</color>
+    <color name="green_300_18">#2e51c371</color>
+    <color name="green_300_30">#4d51c371</color>
+    <color name="green_300_45">#7351c371</color>
+    <color name="green_400_0">#0020ab55</color>
+    <color name="green_400_5">#0d20ab55</color>
+    <color name="green_400_10">#1a20ab55</color>
+    <color name="green_400_20">#3320ab55</color>
+    <color name="green_400_30">#4d20ab55</color>
+    <color name="red_100">#ffffb8b8</color>
+    <color name="red_200">#ffff8683</color>
+    <color name="red_300">#fff36868</color>
+    <color name="red_400">#ffe1535d</color>
+    <color name="red_500">#ffbc3a42</color>
+    <color name="red_600">#ff992c34</color>
+    <color name="red_300_0">#00f36868</color>
+    <color name="red_300_10">#1af36868</color>
+    <color name="red_300_18">#2ef36868</color>
+    <color name="red_300_30">#4df36868</color>
+    <color name="red_300_45">#73f36868</color>
+    <color name="red_400_0">#00e1535d</color>
+    <color name="red_400_5">#0de1535d</color>
+    <color name="red_400_10">#1ae1535d</color>
+    <color name="red_400_20">#33e1535d</color>
+    <color name="red_400_30">#4de1535d</color>
+    <color name="orange_100">#ffffc38f</color>
+    <color name="orange_200">#ffffab70</color>
+    <color name="orange_300">#fff79847</color>
+    <color name="orange_400">#ffe67f2b</color>
+    <color name="orange_500">#ffc1630d</color>
+    <color name="orange_600">#ffa1540c</color>
+    <color name="orange_300_0">#00f79847</color>
+    <color name="orange_300_10">#1af79847</color>
+    <color name="orange_300_18">#2ef79847</color>
+    <color name="orange_300_30">#4df79847</color>
+    <color name="orange_300_45">#73f79847</color>
+    <color name="orange_400_0">#00e67f2b</color>
+    <color name="orange_400_5">#0de67f2b</color>
+    <color name="orange_400_10">#1ae67f2b</color>
+    <color name="orange_400_20">#33e67f2b</color>
+    <color name="orange_400_30">#4de67f2b</color>
+    <color name="yellow_100">#ffffe38f</color>
+    <color name="yellow_200">#fffed968</color>
+    <color name="yellow_300">#fff0be27</color>
+    <color name="yellow_400">#ffedae0d</color>
+    <color name="yellow_500">#ffc38f00</color>
+    <color name="yellow_600">#ff9e7504</color>
+    <color name="yellow_300_0">#00f0be27</color>
+    <color name="yellow_300_10">#1af0be27</color>
+    <color name="yellow_300_18">#2ef0be27</color>
+    <color name="yellow_300_30">#4df0be27</color>
+    <color name="yellow_300_45">#73f0be27</color>
+    <color name="yellow_400_0">#00edae0d</color>
+    <color name="yellow_400_5">#0dedae0d</color>
+    <color name="yellow_400_10">#1aedae0d</color>
+    <color name="yellow_400_20">#33edae0d</color>
+    <color name="yellow_400_30">#4dedae0d</color>
+    <color name="olive_100">#ffe7f17c</color>
+    <color name="olive_200">#ffdbe56e</color>
+    <color name="olive_300">#ffb7c427</color>
+    <color name="olive_400">#ffa9b110</color>
+    <color name="olive_500">#ff7b801c</color>
+    <color name="olive_600">#ff65691c</color>
+    <color name="olive_300_0">#00b7c427</color>
+    <color name="olive_300_10">#1ab7c427</color>
+    <color name="olive_300_18">#2eb7c427</color>
+    <color name="olive_300_30">#4db7c427</color>
+    <color name="olive_300_45">#73b7c427</color>
+    <color name="olive_400_0">#00a9b110</color>
+    <color name="olive_400_5">#0da9b110</color>
+    <color name="olive_400_10">#1aa9b110</color>
+    <color name="olive_400_20">#33a9b110</color>
+    <color name="olive_400_30">#4da9b110</color>
+    <color name="teal_100">#ff9beee6</color>
+    <color name="teal_200">#ff72e0d5</color>
+    <color name="teal_300">#ff40d3c5</color>
+    <color name="teal_400">#ff09b2ac</color>
+    <color name="teal_500">#ff068e95</color>
+    <color name="teal_600">#ff06687d</color>
+    <color name="teal_300_0">#0040d3c5</color>
+    <color name="teal_300_10">#1a40d3c5</color>
+    <color name="teal_300_18">#2e40d3c5</color>
+    <color name="teal_300_30">#4d40d3c5</color>
+    <color name="teal_300_45">#7340d3c5</color>
+    <color name="teal_400_0">#0009b2ac</color>
+    <color name="teal_400_5">#0d09b2ac</color>
+    <color name="teal_400_10">#1a09b2ac</color>
+    <color name="teal_400_20">#3309b2ac</color>
+    <color name="teal_400_30">#4d09b2ac</color>
+    <color name="navy_100">#ffa5b2ee</color>
+    <color name="navy_200">#ff8b99d9</color>
+    <color name="navy_300">#ff7e89cd</color>
+    <color name="navy_400">#ff424fab</color>
+    <color name="navy_500">#ff353888</color>
+    <color name="navy_600">#ff22245b</color>
+    <color name="navy_300_0">#007e89cd</color>
+    <color name="navy_300_10">#1a7e89cd</color>
+    <color name="navy_300_18">#2e7e89cd</color>
+    <color name="navy_300_30">#4d7e89cd</color>
+    <color name="navy_300_45">#737e89cd</color>
+    <color name="navy_400_0">#00424fab</color>
+    <color name="navy_400_5">#0d424fab</color>
+    <color name="navy_400_10">#1a424fab</color>
+    <color name="navy_400_20">#33424fab</color>
+    <color name="navy_400_30">#4d424fab</color>
+    <color name="purple_100">#ffd1b5ff</color>
+    <color name="purple_200">#ffc19aff</color>
+    <color name="purple_300">#ffa970ff</color>
+    <color name="purple_400">#ff8e57e7</color>
+    <color name="purple_500">#ff6735b6</color>
+    <color name="purple_600">#ff54278f</color>
+    <color name="purple_300_0">#00a970ff</color>
+    <color name="purple_300_10">#1aa970ff</color>
+    <color name="purple_300_18">#2ea970ff</color>
+    <color name="purple_300_30">#4da970ff</color>
+    <color name="purple_300_45">#73a970ff</color>
+    <color name="purple_400_0">#008e57e7</color>
+    <color name="purple_400_5">#0d8e57e7</color>
+    <color name="purple_400_10">#1a8e57e7</color>
+    <color name="purple_400_20">#338e57e7</color>
+    <color name="purple_400_30">#4d8e57e7</color>
+    <color name="pink_100">#ffffafef</color>
+    <color name="pink_200">#fff392e0</color>
+    <color name="pink_300">#ffec6fd3</color>
+    <color name="pink_400">#ffd64bb5</color>
+    <color name="pink_500">#ffb0369e</color>
+    <color name="pink_600">#ff962c86</color>
+    <color name="pink_300_0">#00ec6fd3</color>
+    <color name="pink_300_10">#1aec6fd3</color>
+    <color name="pink_300_18">#2eec6fd3</color>
+    <color name="pink_300_30">#4dec6fd3</color>
+    <color name="pink_300_45">#73ec6fd3</color>
+    <color name="pink_400_0">#00d64bb5</color>
+    <color name="pink_400_5">#0dd64bb5</color>
+    <color name="pink_400_10">#1ad64bb5</color>
+    <color name="pink_400_20">#33d64bb5</color>
+    <color name="grey_25">#fffdfdfd</color>
+    <color name="pink_400_30">#4dd64bb5</color>
+    <color name="grey_50">#fffbfbfb</color>
+    <color name="grey_50_80">#ccfbfbfb</color>
+    <color name="grey_100">#fff7f7f8</color>
+    <color name="grey_100_80">#ccf7f7f8</color>
+    <color name="grey_100_90">#e5f7f7f8</color>
+    <color name="grey_200">#ffefeff0</color>
+    <color name="grey_200_80">#ccefeff0</color>
+    <color name="grey_200_90">#e5efeff0</color>
+    <color name="grey_300">#ffe2e2e4</color>
+    <color name="grey_400">#ffcfcfd1</color>
+    <color name="grey_500">#ffa7a7aa</color>
+    <color name="grey_600">#ff79797e</color>
+    <color name="grey_650">#ff5a5a5f</color>
+    <color name="grey_700">#ff3b3b3f</color>
+    <color name="grey_700_80">#cc3b3b3f</color>
+    <color name="grey_700_90">#e53b3b3f</color>
+    <color name="grey_750">#ff313135</color>
+    <color name="grey_750_90">#e5313135</color>
+    <color name="grey_800">#ff29292d</color>
+    <color name="grey_800_80">#cc29292d</color>
+    <color name="grey_800_90">#e529292d</color>
+    <color name="grey_850">#ff242426</color>
+    <color name="grey_850_80">#cc242426</color>
+    <color name="grey_850_90">#e5242426</color>
+    <color name="grey_900">#ff1d1d20</color>
+    <color name="grey_900_90">#e51d1d20</color>
+    <color name="grey_900_0">#001d1d20</color>
+    <color name="grey_950">#ff1a1a1c</color>
+    <color name="white_0">#00ffffff</color>
+    <color name="white_3">#08ffffff</color>
+    <color name="white_5">#0dffffff</color>
+    <color name="white_8">#14ffffff</color>
+    <color name="white_12">#1fffffff</color>
+    <color name="white_20">#33ffffff</color>
+    <color name="white_22">#38ffffff</color>
+    <color name="white_30">#4dffffff</color>
+    <color name="white_40">#66ffffff</color>
+    <color name="white_50">#80ffffff</color>
+    <color name="white_60">#99ffffff</color>
+    <color name="white_80">#ccffffff</color>
+    <color name="white_90">#e5ffffff</color>
+    <color name="white_100">#ffffffff</color>
     <color name="black_0">#00000000</color>
-
-
-    <!-- white -->
-
-    <color name="white">#FFFFFF</color>
-    <color name="white_90">#E6FFFFFF</color>
-    <color name="white_80">#CCFFFFFF</color>
-    <color name="white_60">#99FFFFFF</color>
-    <color name="white_40">#66FFFFFF</color>
-    <color name="white_20">#33FFFFFF</color>
-    <color name="white_12">#1FFFFFFF</color>
-    <color name="white_8">#14FFFFFF</color>
-    <color name="white_5">#0DFFFFFF</color>
-    <color name="white_0">#00FFFFFF</color>
-
+    <color name="black_1">#03000000</color>
+    <color name="black_3">#08000000</color>
+    <color name="black_5">#0d000000</color>
+    <color name="black_8">#14000000</color>
+    <color name="black_15">#26000000</color>
+    <color name="black_20">#33000000</color>
+    <color name="black_22">#38000000</color>
+    <color name="black_30">#4d000000</color>
+    <color name="black_40">#66000000</color>
+    <color name="black_50">#80000000</color>
+    <color name="black_60">#99000000</color>
+    <color name="black_70">#b2000000</color>
+    <color name="black_85">#d9000000</color>
+    <color name="black_100">#ff000000</color>
 </resources>
