컴파일 수정

--- a/bezier/src/main/res/values/typography.xml
+++ b/bezier/src/main/res/values/typography.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="BezierTextAppearance" parent="android:TextAppearance" />
+
     <!-- Heading Styles -->
     <style name="BezierTextAppearance.HeadingXLarge">
         <item name="android:textSize">@dimen/font_size_24</item>
